@@ -20,6 +20,8 @@
 * Update - Revised sanitation of the legacy options handling code pending phaseout.
 * Update - Revised input sanitation in controller for activation processing.
 * Add - Adds the groups_get_current_url() API function.
+* Update - Unified instances of current URL obtention via own groups_get_current_url() API function.
+* Update - Revised pagination processing sanitation.
 
 2026-01-05 - version 3.10.0
 * Update - WordPress 6.9 compatible.
